--- a/geography.html
+++ b/geography.html
@@ -7,13 +7,13 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f9;
+      background: #eafaf1;
       margin: 0;
       padding: 20px;
     }
     h1 {
       text-align: center;
-      color: #2c3e50;
+      color: #1e8449;
     }
     .chapter {
       background: white;
@@ -25,7 +25,7 @@
     .chapter a {
       text-decoration: none;
       font-size: 18px;
-      color: #4caf50; /* Green for Geography */
+      color: #27ae60;
     }
     .chapter a:hover {
       text-decoration: underline;
@@ -36,31 +36,31 @@
   <h1>🌍 Geography Notes - Class 10</h1>
 
   <div class="chapter">
-    <a href="geo_chapter1.pdf" target="_blank">Chapter 1: Resources and Development</a>
+    <a href="geo1.pdf" target="_blank">Chapter 1: Resources and Development</a>
   </div>
 
   <div class="chapter">
-    <a href="geo_chapter2.pdf" target="_blank">Chapter 2: Forest and Wildlife Resources</a>
+    <a href="geo2.pdf" target="_blank">Chapter 2: Forest and Wildlife Resources</a>
   </div>
 
   <div class="chapter">
-    <a href="geo_chapter3.pdf" target="_blank">Chapter 3: Water Resources</a>
+    <a href="geo3.pdf" target="_blank">Chapter 3: Water Resources</a>
   </div>
 
   <div class="chapter">
-    <a href="geo_chapter4.pdf" target="_blank">Chapter 4: Agriculture</a>
+    <a href="geo4.pdf" target="_blank">Chapter 4: Agriculture</a>
   </div>
 
   <div class="chapter">
-    <a href="geo_chapter5.pdf" target="_blank">Chapter 5: Minerals and Energy Resources</a>
+    <a href="geo5.pdf" target="_blank">Chapter 5: Minerals and Energy Resources</a>
   </div>
 
   <div class="chapter">
-    <a href="geo_chapter6.pdf" target="_blank">Chapter 6: Manufacturing Industries</a>
+    <a href="geo6.pdf" target="_blank">Chapter 6: Manufacturing Industries</a>
   </div>
 
   <div class="chapter">
-    <a href="geo_chapter7.pdf" target="_blank">Chapter 7: Lifelines of National Economy</a>
+    <a href="geo7.pdf" target="_blank">Chapter 7: Lifelines of National Economy</a>
   </div>
 
 </body>
