--- a/civics.html
+++ b/civics.html
@@ -7,13 +7,13 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f9;
+      background: #ebf5fb;
       margin: 0;
       padding: 20px;
     }
     h1 {
       text-align: center;
-      color: #2c3e50;
+      color: #154360;
     }
     .chapter {
       background: white;
@@ -25,7 +25,7 @@
     .chapter a {
       text-decoration: none;
       font-size: 18px;
-      color: #9c27b0; /* Purple for Civics */
+      color: #1f618d;
     }
     .chapter a:hover {
       text-decoration: underline;
@@ -36,35 +36,35 @@
   <h1>🏛 Civics Notes - Class 10</h1>
 
   <div class="chapter">
-    <a href="civics_chapter1.pdf" target="_blank">Chapter 1: Power Sharing</a>
+    <a href="civics1.pdf" target="_blank">Chapter 1: Power Sharing</a>
   </div>
 
   <div class="chapter">
-    <a href="civics_chapter2.pdf" target="_blank">Chapter 2: Federalism</a>
+    <a href="civics2.pdf" target="_blank">Chapter 2: Federalism</a>
   </div>
 
   <div class="chapter">
-    <a href="civics_chapter3.pdf" target="_blank">Chapter 3: Democracy and Diversity</a>
+    <a href="civics3.pdf" target="_blank">Chapter 3: Democracy and Diversity</a>
   </div>
 
   <div class="chapter">
-    <a href="civics_chapter4.pdf" target="_blank">Chapter 4: Gender, Religion and Caste</a>
+    <a href="civics4.pdf" target="_blank">Chapter 4: Gender, Religion and Caste</a>
   </div>
 
   <div class="chapter">
-    <a href="civics_chapter5.pdf" target="_blank">Chapter 5: Popular Struggles and Movements</a>
+    <a href="civics5.pdf" target="_blank">Chapter 5: Popular Struggles and Movements</a>
   </div>
 
   <div class="chapter">
-    <a href="civics_chapter6.pdf" target="_blank">Chapter 6: Political Parties</a>
+    <a href="civics6.pdf" target="_blank">Chapter 6: Political Parties</a>
   </div>
 
   <div class="chapter">
-    <a href="civics_chapter7.pdf" target="_blank">Chapter 7: Outcomes of Democracy</a>
+    <a href="civics7.pdf" target="_blank">Chapter 7: Outcomes of Democracy</a>
   </div>
 
   <div class="chapter">
-    <a href="civics_chapter8.pdf" target="_blank">Chapter 8: Challenges to Democracy</a>
+    <a href="civics8.pdf" target="_blank">Chapter 8: Challenges to Democracy</a>
   </div>
 
 </body>
