--- a/economics.html
+++ b/economics.html
@@ -7,13 +7,13 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f9;
+      background: #fff4e6;
       margin: 0;
       padding: 20px;
     }
     h1 {
       text-align: center;
-      color: #2c3e50;
+      color: #af601a;
     }
     .chapter {
       background: white;
@@ -25,7 +25,7 @@
     .chapter a {
       text-decoration: none;
       font-size: 18px;
-      color: #e91e63; /* Pink for Economics */
+      color: #ca6f1e;
     }
     .chapter a:hover {
       text-decoration: underline;
@@ -33,26 +33,26 @@
   </style>
 </head>
 <body>
-  <h1>📊 Economics Notes - Class 10</h1>
+  <h1>💰 Economics Notes - Class 10</h1>
 
   <div class="chapter">
-    <a href="eco_chapter1.pdf" target="_blank">Chapter 1: Development</a>
+    <a href="eco1.pdf" target="_blank">Chapter 1: Development</a>
   </div>
 
   <div class="chapter">
-    <a href="eco_chapter2.pdf" target="_blank">Chapter 2: Sectors of the Indian Economy</a>
+    <a href="eco2.pdf" target="_blank">Chapter 2: Sectors of the Indian Economy</a>
   </div>
 
   <div class="chapter">
-    <a href="eco_chapter3.pdf" target="_blank">Chapter 3: Money and Credit</a>
+    <a href="eco3.pdf" target="_blank">Chapter 3: Money and Credit</a>
   </div>
 
   <div class="chapter">
-    <a href="eco_chapter4.pdf" target="_blank">Chapter 4: Globalisation and the Indian Economy</a>
+    <a href="eco4.pdf" target="_blank">Chapter 4: Globalisation and the Indian Economy</a>
   </div>
 
   <div class="chapter">
-    <a href="eco_chapter5.pdf" target="_blank">Chapter 5: Consumer Rights</a>
+    <a href="eco5.pdf" target="_blank">Chapter 5: Consumer Rights</a>
   </div>
 
 </body>
